export interface Asistencia {
  id: number;
  studentName: string;
  studentLastName: string;
  subjectName?: string;
  date?: string;
  state: string;
}
