export interface Seguimiento {
  id: number;
  alertId: number;
  professorName?: string;
  action: string;
  result?: string;
  date?: string;
}
